Add summary count-up, highscore board, and audio mixer

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -468,6 +468,7 @@ von diesem Effekt betroffen).</p></li>
   <li><h3>Within-Subjects-Design (Innersubjekt Design) Beispiele:</h3>
     <p>
     <table class="legend-table" style="--key-col: 50%;">
+      <tbody>
     <tr>
       <td>
           One Shot Case Study (OSCS), One-Group Post-Test Only Design
@@ -495,7 +496,9 @@ von diesem Effekt betroffen).</p></li>
           <h3>G  O  X  O  O  X  O</h3>
       </td>
     </tr>
+    </tbody>
     </table>
+
 <h3>Legende:</h3>
 <dl>
   <dt>O = Messung</dt>
