--- a/training.html
+++ b/training.html
@@ -184,6 +184,19 @@
           </div>
         </div>
         <div class="training-group">
+          <div class="training-title">Highscores</div>
+          <ol class="training-scores" id="training-scores"></ol>
+        </div>
+        <div class="training-group">
+          <div class="training-title">Audio Mixer</div>
+          <div class="training-mixer">
+            <label>UI <input type="range" min="0" max="100" value="100" data-sfx="ui"></label>
+            <label>Hit <input type="range" min="0" max="100" value="100" data-sfx="hit"></label>
+            <label>Boss <input type="range" min="0" max="100" value="100" data-sfx="boss"></label>
+            <label>Type <input type="range" min="0" max="100" value="100" data-sfx="type"></label>
+          </div>
+        </div>
+        <div class="training-group">
           <div class="training-title">Map</div>
           <div class="training-row">
             <select class="training-select" id="training-map"></select>
