Add save slots, daily mode, and boss spawns

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -465,7 +465,7 @@ von diesem Effekt betroffen).</p></li>
       <li><i>Between-Subjects-Design</i> (Zwischensubjekt-Design): Teilnehmer werden in unterschiedliche Gruppen aufgeteilt, wobei jede Gruppe nur einer Bedingung ausgesetzt wird.</li>
     </ul>
   </li>
-  <li><h3>Within-Subjects-Design (Innersubjekt Design) Beispiele:</h3>
+  <li>Within-Subjects-Design (Innersubjekt Design) Beispiele:
     <p>
     <table class="legend-table" style="--key-col: 50%;">
       <tbody>
@@ -499,7 +499,7 @@ von diesem Effekt betroffen).</p></li>
     </tbody>
     </table>
 
-<h3>Legende:</h3>
+<strong>Legende:</strong>
 <dl>
   <dt>O = Messung</dt>
   <dt>X = Intervention; Ereignis</dt>
@@ -508,7 +508,8 @@ von diesem Effekt betroffen).</p></li>
 
     
 </p>
-    
+</ul>
+
   </main>
 
   <script>
