Add slot preview, daily leaderboard, and boss adds

--- a/training.html
+++ b/training.html
@@ -188,6 +188,10 @@
           <ol class="training-scores" id="training-scores"></ol>
         </div>
         <div class="training-group">
+          <div class="training-title">Daily Leaderboard</div>
+          <ol class="training-scores" id="training-daily-scores"></ol>
+        </div>
+        <div class="training-group">
           <div class="training-title">Audio Mixer</div>
           <div class="training-mixer">
             <label>UI <input type="range" min="0" max="100" value="100" data-sfx="ui"></label>
@@ -225,6 +229,7 @@
             <select class="training-select" id="training-slot"></select>
             <button class="training-btn ghost" id="training-slot-load" type="button">Load</button>
           </div>
+          <div class="training-slot-preview" id="training-slot-preview">Slot leer</div>
           <div class="training-row">
             <button class="training-btn ghost" id="training-export" type="button">Export</button>
             <label class="training-btn ghost training-import">
