Add slot previews, daily streaks, and boss shields

--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -498,6 +498,41 @@ von diesem Effekt betroffen).</p></li>
     </tbody>
     </table>
     </li>
+    <li>
+      Between-Subjects Designs (Zwischensubjekt Design) Beispiele:
+      <table class="legend-table" style="--key-col: 50%;">
+      <tbody>
+    <tr>
+      <td>
+          Nicht-randomisierte Vergleichsgruppen
+      </td>
+      <td>
+          <h3>G  X  O</h3>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+          Eingruppenplan mit Prätests (Baseline)
+      </td>
+      <td>
+          <h3>G  O  O  X  O</h3>
+      </td>
+    </tr>
+
+    <tr>
+      <td>
+        ABAB-Design <br>
+        <i>ABAB-Versuchsplan, Versuchsplan, bei dem zuerst Verhalten gemessen wird, um einen Standard (baseline) zu erhalten (A), dann ein zweites Mal, nachdem die experimentelle Bedingung zum Tragen gekommen ist (B), dann erneut, nachdem die baseline-Bedingungen wiederhergestellt sind (A), und ein letztes Mal, nachdem wieder die experimentelle Bedingung eingeführt ist (B) (Versuchsplanung).</i>
+      </td>
+      <td>
+          <h3>G  O  X  O  O  X  O</h3>
+      </td>
+    </tr>
+    </tbody>
+    </table>
+    </li>
+
 
 <strong>Legende:</strong>
 <dl>
