--- a/training.html
+++ b/training.html
@@ -230,6 +230,7 @@
             <button class="training-btn ghost" id="training-slot-load" type="button">Load</button>
           </div>
           <div class="training-slot-preview" id="training-slot-preview">Slot leer</div>
+          <div class="training-slot-preview" id="training-streak">Daily Streak: 0</div>
           <div class="training-row">
             <button class="training-btn ghost" id="training-export" type="button">Export</button>
             <label class="training-btn ghost training-import">
@@ -288,6 +289,7 @@
           <li>Shield/Tank haben Ruestung, nehmen weniger Schaden.</li>
           <li>Swarm ist schnell und zerbrechlich.</li>
           <li>Regen heilt sich langsam selbst.</li>
+          <li>Boss aktiviert manchmal ein Schild (weniger Schaden).</li>
         </ul>
         <h3>Shortcuts</h3>
         <ul>
@@ -296,7 +298,9 @@
           <li><code>Shift+L</code> Quick Load</li>
         </ul>
         <p>Save-Slots: Auswahl oben im Savegame-Block, Autosave schreibt in den aktiven Slot.</p>
+        <p>Slot-Preview zeigt Welle, Credits und Datum des Saves.</p>
         <p>Daily Run nutzt einen taeglichen Seed fuer gleiche Wellen.</p>
+        <p>Daily Leaderboard + Streak sind lokal pro Browser gespeichert.</p>
         <p>Sound kann im HUD mit dem Sound-Button stummgeschaltet werden.</p>
       </div>
       <div class="training-help-glow"></div>
