--- a/training.html
+++ b/training.html
@@ -298,9 +298,9 @@
           <li><code>Shift+L</code> Quick Load</li>
         </ul>
         <p>Save-Slots: Auswahl oben im Savegame-Block, Autosave schreibt in den aktiven Slot.</p>
-        <p>Slot-Preview zeigt Welle, Credits und Datum des Saves.</p>
+        <p>Slot-Preview zeigt Welle, Map, Credits, Lives, Kills und Datum.</p>
         <p>Daily Run nutzt einen taeglichen Seed fuer gleiche Wellen.</p>
-        <p>Daily Leaderboard + Streak sind lokal pro Browser gespeichert.</p>
+        <p>Daily Leaderboard + Streak sind lokal pro Browser gespeichert; Streak gibt Bonus-Credits.</p>
         <p>Sound kann im HUD mit dem Sound-Button stummgeschaltet werden.</p>
       </div>
       <div class="training-help-glow"></div>
