--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -497,6 +497,14 @@ von diesem Effekt betroffen).</p></li>
     </tr>
     </tbody>
     </table>
+    <tr>
+      <strong>Legende:</strong>
+<dl>
+  <dt>O = Messung</dt>
+  <dt>X = Intervention; Ereignis</dt>
+  <dt>G = Gruppe</dt>
+</dl>
+    </tr>
     </li>
     <li>
       Between-Subjects Designs (Zwischensubjekt Design) Beispiele:
