--- a/statistik/allgemeines.html
+++ b/statistik/allgemeines.html
@@ -515,26 +515,33 @@ von diesem Effekt betroffen).</p></li>
           Nicht-randomisierte Vergleichsgruppen
       </td>
       <td>
-          <h3>G  X  O</h3>
+          <h3>GA  X  O</h3>
       </td>
     </tr>
 
     <tr>
       <td>
-          Eingruppenplan mit Prätests (Baseline)
+          <i>Poststest-Only-Design With Nonequivalent Groups</i>
       </td>
       <td>
-          <h3>G  O  O  X  O</h3>
+          <h3>GB     O</h3>
       </td>
     </tr>
 
     <tr>
       <td>
-        ABAB-Design <br>
-        <i>ABAB-Versuchsplan, Versuchsplan, bei dem zuerst Verhalten gemessen wird, um einen Standard (baseline) zu erhalten (A), dann ein zweites Mal, nachdem die experimentelle Bedingung zum Tragen gekommen ist (B), dann erneut, nachdem die baseline-Bedingungen wiederhergestellt sind (A), und ein letztes Mal, nachdem wieder die experimentelle Bedingung eingeführt ist (B) (Versuchsplanung).</i>
+        Randomisierte Vorher- und Nachhermessung mit Kontrollgruppe <br> 
       </td>
       <td>
-          <h3>G  O  X  O  O  X  O</h3>
+          <h3>R  GA  O  X  O</h3>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <i>Pretest-Posttest Control Group Design</i>
+      </td>
+      <td>
+          <h3>R  GB     X  O</h3>
       </td>
     </tr>
     </tbody>
@@ -547,6 +554,7 @@ von diesem Effekt betroffen).</p></li>
   <dt>O = Messung</dt>
   <dt>X = Intervention; Ereignis</dt>
   <dt>G = Gruppe</dt>
+  <dt>R = Randomisierung</dt>
 </dl>
 
     
