Use umlauts in README and training copy

--- a/training.html
+++ b/training.html
@@ -129,13 +129,13 @@
 
   <main>
     <h1>Training</h1>
-    <p>Matrix-Defense im gleichen Layout. Auto-Save laeuft im Hintergrund und kann als JSON exportiert/importiert werden.</p>
+    <p>Matrix-Defense im gleichen Layout. Auto-Save läuft im Hintergrund und kann als JSON exportiert/importiert werden.</p>
 
     <section class="training-shell">
       <div class="training-bar">
         <div class="training-stat">Credits <span data-stat="credits">0</span></div>
         <div class="training-stat">Welle <span data-stat="wave">0</span></div>
-        <div class="training-stat">Integritaet <span data-stat="lives">0</span></div>
+        <div class="training-stat">Integrität <span data-stat="lives">0</span></div>
         <button class="training-btn" id="training-start" type="button">Start Wave</button>
         <button class="training-btn ghost" id="training-pause" type="button">Pause</button>
         <button class="training-btn ghost" id="training-help" type="button">Anleitung</button>
@@ -165,8 +165,8 @@
           <div class="training-intel">
             <span class="intel-chip" data-tip="Standard-Drohne">D</span>
             <span class="intel-chip" data-tip="Schnell, wenig HP">F</span>
-            <span class="intel-chip" data-tip="Tank mit Ruestung">T</span>
-            <span class="intel-chip" data-tip="Shield, hohe Ruestung">S</span>
+            <span class="intel-chip" data-tip="Tank mit Rüstung">T</span>
+            <span class="intel-chip" data-tip="Shield, hohe Rüstung">S</span>
             <span class="intel-chip" data-tip="Swarm, sehr schnell">W</span>
             <span class="intel-chip" data-tip="Regen, heilt sich">R</span>
             <span class="intel-chip" data-tip="Boss, hoher Druck">B</span>
@@ -206,13 +206,13 @@
             <select class="training-select" id="training-map"></select>
             <button class="training-btn ghost" id="training-map-apply" type="button">Apply</button>
           </div>
-          <div class="training-note">Wechsel nur ausserhalb einer Welle.</div>
+          <div class="training-note">Wechsel nur außerhalb einer Welle.</div>
         </div>
         <div class="training-group">
           <div class="training-title">Auswahl</div>
           <div class="training-selected" data-selected>Kein Tower</div>
           <div class="training-branch" id="training-branch" hidden>
-            <div class="training-branch-title">Pfad waehlen</div>
+            <div class="training-branch-title">Pfad wählen</div>
             <div class="training-row">
               <button class="training-btn" id="training-branch-a" type="button"></button>
               <button class="training-btn" id="training-branch-b" type="button"></button>
@@ -257,7 +257,7 @@
       </div>
     </section>
 
-    <p class="training-tip">Shortcuts: <code>9</code> oeffnet Training von jeder Seite, <code>Shift+S</code> Quick Save, <code>Shift+L</code> Quick Load.</p>
+    <p class="training-tip">Shortcuts: <code>9</code> öffnet Training von jeder Seite, <code>Shift+S</code> Quick Save, <code>Shift+L</code> Quick Load.</p>
   </main>
   </div>
 
@@ -269,12 +269,12 @@
       </div>
       <div class="training-help-body">
         <div class="type-line" data-typewriter>Link established...</div>
-        <p>Baue Tower neben dem Pfad, stoppe Datenstroeme, schuetze den Core.</p>
+        <p>Baue Tower neben dem Pfad, stoppe Datenströme, schütze den Core.</p>
         <p>Campaign: Erreiche die Zielwelle pro Stage, um neue Maps freizuschalten.</p>
         <h3>Basics</h3>
         <ul>
-          <li>Start Wave startet die naechste Welle.</li>
-          <li>Credits = Geld, Integritaet = Leben.</li>
+          <li>Start Wave startet die nächste Welle.</li>
+          <li>Credits = Geld, Integrität = Leben.</li>
           <li>Upgrade verbessert Reichweite, Schaden, Tempo.</li>
         </ul>
         <h3>Tower</h3>
@@ -282,24 +282,24 @@
           <li>Pulse: guter Allrounder, setzt Burn (DoT).</li>
           <li>Snare: verlangsamt Gegner.</li>
           <li>Arc: Ketten-Schaden + kurzer EMP (Stun).</li>
-          <li>Ab Level 1 Pfad waehlen: jeder Tower hat zwei Spezialisierungen.</li>
+          <li>Ab Level 1 Pfad wählen: jeder Tower hat zwei Spezialisierungen.</li>
         </ul>
         <h3>Gegner</h3>
         <ul>
-          <li>Shield/Tank haben Ruestung, nehmen weniger Schaden.</li>
+          <li>Shield/Tank haben Rüstung, nehmen weniger Schaden.</li>
           <li>Swarm ist schnell und zerbrechlich.</li>
           <li>Regen heilt sich langsam selbst.</li>
           <li>Boss aktiviert manchmal ein Schild (weniger Schaden).</li>
         </ul>
         <h3>Shortcuts</h3>
         <ul>
-          <li><code>9</code> Training oeffnen</li>
+          <li><code>9</code> Training öffnen</li>
           <li><code>Shift+S</code> Quick Save</li>
           <li><code>Shift+L</code> Quick Load</li>
         </ul>
         <p>Save-Slots: Auswahl oben im Savegame-Block, Autosave schreibt in den aktiven Slot.</p>
         <p>Slot-Preview zeigt Welle, Map, Credits, Lives, Kills und Datum.</p>
-        <p>Daily Run nutzt einen taeglichen Seed fuer gleiche Wellen.</p>
+        <p>Daily Run nutzt einen täglichen Seed für gleiche Wellen.</p>
         <p>Daily Leaderboard + Streak sind lokal pro Browser gespeichert; Streak gibt Bonus-Credits.</p>
         <p>Sound kann im HUD mit dem Sound-Button stummgeschaltet werden.</p>
       </div>
@@ -312,7 +312,7 @@
       <div class="training-summary-body">
         <div data-summary="wave">Welle 0</div>
         <div data-summary="credits">Credits: 0</div>
-        <div data-summary="lives">Integritaet: 0</div>
+        <div data-summary="lives">Integrität: 0</div>
         <div data-summary="kills">Kills: 0</div>
         <div data-summary="bonus">Bonus: 0</div>
       </div>
