Add pixel Neo hero and enhance pixel art sprites

--- a/training.html
+++ b/training.html
@@ -129,7 +129,13 @@
 
   <main>
     <h1>Training</h1>
-    <p>Matrix-Defense im gleichen Layout. Auto-Save läuft im Hintergrund und kann als JSON exportiert/importiert werden.</p>
+    <div class="training-hero">
+      <canvas id="training-hero" width="96" height="96" aria-label="Neo Pixel Art"></canvas>
+      <div class="training-hero-text">
+        <p>Matrix-Defense im gleichen Layout. Auto-Save läuft im Hintergrund und kann als JSON exportiert/importiert werden.</p>
+        <p class="training-hero-sub">Zion Defense Protocols // v14.</p>
+      </div>
+    </div>
 
     <section class="training-shell">
       <div class="training-bar">
