Add Messtechnik page with pirate theme and SoundCloud player

--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
     <ul class="toc">
       <li><a href="statistik.html">Statistik</a></li>
       <li><a href="elektrotechnik/elektrotechnik.html">Elektrotechnik</a></li>
+      <li><a href="messtechnik/messtechnik.html">Messtechnik</a></li>
       <li><a href="training.html">Training</a></li>
       <li><a href="white-rabbit.html">White Rabbit</a></li>
     </ul>
