Add All Blue map background and sailing ship scroll

--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -15,6 +15,8 @@
   --gold:#d2a654;
   --rope:#a9824f;
   --rust:#8a2b1d;
+  --seafoam:#7fc7b4;
+  --mapline:#d6b47c;
   --shadow: rgba(19,10,5,0.45);
 }
 
@@ -39,6 +41,38 @@ body::before{
   opacity:0.5;
   pointer-events:none;
   mix-blend-mode:soft-light;
+}
+
+.map-layer{
+  position: fixed;
+  inset: 0;
+  z-index: 0;
+  overflow: hidden;
+}
+
+.map-svg{
+  width: 100%;
+  height: 100%;
+}
+
+.map-ship{
+  filter: drop-shadow(0 6px 6px rgba(12,6,3,0.45));
+}
+
+.map-ship .hull{
+  fill: var(--rust);
+}
+
+.map-ship .sail{
+  fill: var(--sand);
+  stroke: rgba(43,26,12,0.5);
+  stroke-width: 1;
+}
+
+.map-ship .mast{
+  stroke: #4b2d17;
+  stroke-width: 3;
+  stroke-linecap: round;
 }
 
 main{
@@ -71,8 +105,8 @@ a:hover{
 }
 
 #rain{
-  opacity:0.18;
-  filter: hue-rotate(180deg) saturate(0.45);
+  opacity:0.12;
+  filter: hue-rotate(180deg) saturate(0.3);
 }
 
 /* Home-Button */
@@ -206,6 +240,44 @@ a:hover{
   <link rel="stylesheet" href="../neo.css">
 </head>
 <body class="pirate">
+  <div class="map-layer" aria-hidden="true">
+    <svg class="map-svg" viewBox="0 0 1000 800" preserveAspectRatio="xMidYMid slice">
+      <defs>
+        <linearGradient id="mapWash" x1="0" y1="0" x2="1" y2="1">
+          <stop offset="0%" stop-color="#123248"/>
+          <stop offset="45%" stop-color="#0f283a"/>
+          <stop offset="100%" stop-color="#0b1b2a"/>
+        </linearGradient>
+        <pattern id="waves" width="120" height="120" patternUnits="userSpaceOnUse">
+          <path d="M0 70 C 20 50, 40 90, 60 70 C 80 50, 100 90, 120 70" fill="none" stroke="rgba(127,199,180,0.2)" stroke-width="2"/>
+        </pattern>
+        <filter id="softGlow" x="-20%" y="-20%" width="140%" height="140%">
+          <feGaussianBlur stdDeviation="6" result="blur"/>
+          <feColorMatrix in="blur" type="matrix"
+            values="1 0 0 0 0  0 1 0 0 0  0 0 1 0 0  0 0 0 0.5 0" result="glow"/>
+          <feMerge>
+            <feMergeNode in="glow"/>
+            <feMergeNode in="SourceGraphic"/>
+          </feMerge>
+        </filter>
+      </defs>
+      <rect width="100%" height="100%" fill="url(#mapWash)"/>
+      <rect width="100%" height="100%" fill="url(#waves)" opacity="0.4"/>
+      <path d="M160 160 C 300 120, 380 180, 480 110 C 600 40, 720 140, 820 100 L 900 140 L 860 210 C 820 250, 760 270, 720 320 C 680 380, 630 420, 560 440 C 500 460, 420 520, 360 560 C 300 600, 220 640, 140 620 L 90 560 L 120 500 C 150 440, 120 360, 100 320 C 80 280, 90 220, 160 160 Z"
+        fill="rgba(11,27,42,0.35)" stroke="rgba(214,180,124,0.2)" stroke-width="2"/>
+      <path d="M280 250 C 340 220, 420 210, 520 240 C 600 260, 680 290, 740 340 C 820 400, 850 470, 830 560"
+        fill="none" stroke="rgba(214,180,124,0.35)" stroke-width="3" stroke-dasharray="6 8"/>
+      <path id="route-path" d="M140 540 C 230 500, 310 470, 380 420 C 460 360, 530 320, 620 300 C 700 280, 760 240, 820 200"
+        fill="none" stroke="var(--mapline)" stroke-width="3" stroke-dasharray="10 10" filter="url(#softGlow)"/>
+      <g id="ship" class="map-ship">
+        <path class="hull" d="M-22 10 L 22 10 L 10 26 L -10 26 Z"/>
+        <path class="sail" d="M0 -28 L 0 10 L -26 2 Z"/>
+        <path class="sail" d="M0 -22 L 24 -12 L 0 -6 Z"/>
+        <line class="mast" x1="0" y1="-30" x2="0" y2="14"/>
+        <circle cx="6" cy="10" r="3" fill="#d2a654"/>
+      </g>
+    </svg>
+  </div>
   <canvas id="rain"></canvas>
   <nav class="home-only">
   <a href="../index.html" class="home">Schreibtisch</a>
@@ -250,10 +322,10 @@ a:hover{
   <main>
   <h1>Messtechnik</h1>
 
-  <h2>Worum geht es</h2>
+  <h2>Namis Karte</h2>
   <p>
-    Messtechnik verbindet Sensorik, Signalaufbereitung und Auswertung, um
-    Werte erfahrbar zu machen und fair vergleichen zu koennen.
+    Hier entsteht der Atlas der Crew: Strukturen, Daten und Praxis, die den
+    Kurs sauber halten. Messtechnik als Navigation im All Blue.
   </p>
 
   <h2>Kompass</h2>
@@ -268,6 +340,10 @@ a:hover{
     <li>Kalibrierung und Referenzen</li>
     <li>Auswertung mit Augenmass</li>
   </ul>
+
+  <p>
+    Scrolle nach unten: die Flying Lamb segelt die Route weiter.
+  </p>
 
   </main>
   <iframe
@@ -350,6 +426,30 @@ a:hover{
       toggle();
     }
   });
+})();
+  </script>
+  <script>
+(() => {
+  const route = document.getElementById("route-path");
+  const ship = document.getElementById("ship");
+  if (!route || !ship) return;
+
+  const total = route.getTotalLength();
+
+  function updateShip(){
+    const doc = document.documentElement;
+    const scrollTop = doc.scrollTop || document.body.scrollTop || 0;
+    const maxScroll = doc.scrollHeight - doc.clientHeight;
+    const t = maxScroll > 0 ? scrollTop / maxScroll : 0;
+    const point = route.getPointAtLength(total * t);
+    const next = route.getPointAtLength(Math.min(total, total * t + 1));
+    const angle = Math.atan2(next.y - point.y, next.x - point.x) * 180 / Math.PI;
+    ship.setAttribute("transform", `translate(${point.x} ${point.y}) rotate(${angle})`);
+  }
+
+  updateShip();
+  window.addEventListener("scroll", updateShip, { passive: true });
+  window.addEventListener("resize", updateShip);
 })();
   </script>
 </body>
