--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -275,97 +275,131 @@ a:hover{
 /* Pirate TOC + bookmarks */
 .pirate .toc-panel{
   background:
-    linear-gradient(180deg, rgba(21,12,6,0.9) 0%, rgba(12,7,4,0.92) 60%),
-    repeating-linear-gradient(0deg, rgba(210,166,84,0.08) 0px, rgba(210,166,84,0.08) 1px, transparent 1px, transparent 4px);
-  border-right: 2px solid rgba(210,166,84,0.55);
+    linear-gradient(180deg, rgba(255,240,210,0.92) 0%, rgba(235,208,158,0.94) 55%, rgba(210,176,120,0.96) 100%),
+    repeating-linear-gradient(90deg, rgba(90,60,30,0.12) 0px, rgba(90,60,30,0.12) 2px, transparent 2px, transparent 18px),
+    repeating-linear-gradient(0deg, rgba(120,90,50,0.08) 0px, rgba(120,90,50,0.08) 1px, transparent 1px, transparent 6px);
+  border-right: 4px solid #5c3b1d;
   color: var(--sand);
   box-shadow: 10px 0 24px rgba(0, 0, 0, 0.4), inset 0 0 18px rgba(210,166,84,0.18);
 }
 
 .pirate .toc-panel::before{
-  content: none;
+  content: "";
+  position: absolute;
+  inset: 8px;
+  border: 2px dashed rgba(120,84,46,0.45);
+  border-radius: 10px;
+  pointer-events: none;
+  opacity: 0.7;
+}
+
+.pirate .toc-panel::after{
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-right: 10px solid rgba(92,59,29,0.65);
+  box-shadow: inset 0 0 26px rgba(60,32,12,0.5);
+  pointer-events: none;
 }
 
 .pirate .toc-title{
-  color: var(--gold);
-  text-shadow: 0 0 10px rgba(210,166,84,0.35);
+  color: #5a3b1f;
+  text-shadow: 0 2px 6px rgba(60,32,12,0.35);
 }
 
 .pirate .toc-close{
-  border: 1px solid rgba(210,166,84,0.5);
-  color: var(--sand);
+  border: 2px solid rgba(92,59,29,0.6);
+  color: #5a3b1f;
+  background: rgba(255,240,210,0.8);
 }
 
 .pirate .toc-list a{
-  border: 1px solid rgba(210,166,84,0.35);
-  background: rgba(28,16,10,0.7);
-  color: #f3d8a1;
+  border: 1px solid rgba(120,84,46,0.45);
+  background: rgba(255,243,220,0.9);
+  color: #553517;
 }
 
 .pirate .toc-list a:hover{
-  box-shadow: 0 0 14px rgba(210,166,84,0.35);
+  box-shadow: 0 0 14px rgba(120,84,46,0.35);
 }
 
 .pirate .toc-list a.toc-active{
-  border-color: rgba(210,166,84,0.9);
-  box-shadow: 0 0 16px rgba(210,166,84,0.35), inset 0 0 10px rgba(210,166,84,0.2);
-  color: var(--sand);
+  border-color: rgba(120,84,46,0.9);
+  box-shadow: 0 0 16px rgba(120,84,46,0.35), inset 0 0 10px rgba(210,166,84,0.3);
+  color: #3d240f;
 }
 
 .pirate .toc-tab{
-  background: rgba(19,10,6,0.8);
-  border: 2px solid rgba(210,166,84,0.55);
-  color: var(--sand);
-  box-shadow: 0 0 12px rgba(0,0,0,0.35);
+  background: linear-gradient(180deg, #f7e6c6 0%, #dfc08c 100%);
+  border: 2px solid #5c3b1d;
+  color: #4b2d17;
+  box-shadow: 0 6px 12px rgba(40,22,10,0.4);
 }
 
 .pirate .toc-tab:hover{
-  box-shadow: 0 0 16px rgba(210,166,84,0.35);
+  box-shadow: 0 8px 16px rgba(40,22,10,0.45);
 }
 
 .pirate .bm-panel{
   background:
-    linear-gradient(180deg, rgba(21,12,6,0.9) 0%, rgba(12,7,4,0.92) 60%),
-    repeating-linear-gradient(0deg, rgba(210,166,84,0.08) 0px, rgba(210,166,84,0.08) 1px, transparent 1px, transparent 4px);
-  border-left: 2px solid rgba(210,166,84,0.55);
+    linear-gradient(180deg, rgba(255,240,210,0.92) 0%, rgba(235,208,158,0.94) 55%, rgba(210,176,120,0.96) 100%),
+    repeating-linear-gradient(90deg, rgba(90,60,30,0.12) 0px, rgba(90,60,30,0.12) 2px, transparent 2px, transparent 18px),
+    repeating-linear-gradient(0deg, rgba(120,90,50,0.08) 0px, rgba(120,90,50,0.08) 1px, transparent 1px, transparent 6px);
+  border-left: 4px solid #5c3b1d;
   color: var(--sand);
   box-shadow: -10px 0 24px rgba(0, 0, 0, 0.4), inset 0 0 18px rgba(210,166,84,0.18);
 }
 
 .pirate .bm-panel::before{
-  content: none;
+  content: "";
+  position: absolute;
+  inset: 8px;
+  border: 2px dashed rgba(120,84,46,0.45);
+  border-radius: 10px;
+  pointer-events: none;
+  opacity: 0.7;
+}
+
+.pirate .bm-panel::after{
+  content: "";
+  position: absolute;
+  inset: 0;
+  border-left: 10px solid rgba(92,59,29,0.65);
+  box-shadow: inset 0 0 26px rgba(60,32,12,0.5);
+  pointer-events: none;
 }
 
 .pirate .bm-title{
-  color: var(--gold);
-  text-shadow: 0 0 10px rgba(210,166,84,0.35);
+  color: #5a3b1f;
+  text-shadow: 0 2px 6px rgba(60,32,12,0.35);
 }
 
 .pirate .bm-close{
-  border: 1px solid rgba(210,166,84,0.5);
-  color: var(--sand);
+  border: 2px solid rgba(92,59,29,0.6);
+  color: #5a3b1f;
+  background: rgba(255,240,210,0.8);
 }
 
 .pirate .bm-actions button{
-  background: rgba(28,16,10,0.7);
-  border: 1px solid rgba(210,166,84,0.5);
-  color: var(--sand);
+  background: rgba(255,243,220,0.9);
+  border: 1px solid rgba(120,84,46,0.5);
+  color: #4b2d17;
 }
 
 .pirate .bm-jump{
-  background: rgba(28,16,10,0.7);
-  border: 1px solid rgba(210,166,84,0.4);
-  color: var(--sand);
+  background: rgba(255,243,220,0.9);
+  border: 1px solid rgba(120,84,46,0.4);
+  color: #4b2d17;
 }
 
 .pirate .bm-jump:hover{
-  box-shadow: 0 0 14px rgba(210,166,84,0.35);
+  box-shadow: 0 0 14px rgba(120,84,46,0.35);
   animation: none;
 }
 
 .pirate .bm-jump.bm-active{
-  border-color: rgba(210,166,84,0.9);
-  box-shadow: 0 0 16px rgba(210,166,84,0.35), inset 0 0 10px rgba(210,166,84,0.2);
+  border-color: rgba(120,84,46,0.9);
+  box-shadow: 0 0 16px rgba(120,84,46,0.35), inset 0 0 10px rgba(210,166,84,0.3);
 }
 
 .pirate .bm-matrix{
@@ -373,26 +407,26 @@ a:hover{
 }
 
 .pirate .bm-label{
-  color: #f3d8a1;
-  text-shadow: 0 0 8px rgba(210,166,84,0.25);
+  color: #553517;
+  text-shadow: 0 0 6px rgba(120,84,46,0.25);
 }
 
 .pirate .bm-edit,
 .pirate .bm-del{
-  background: rgba(28,16,10,0.7);
-  border: 1px solid rgba(210,166,84,0.5);
-  color: var(--sand);
+  background: rgba(255,243,220,0.9);
+  border: 1px solid rgba(120,84,46,0.5);
+  color: #4b2d17;
 }
 
 .pirate .bm-tab{
-  background: rgba(19,10,6,0.8);
-  border: 2px solid rgba(210,166,84,0.55);
-  color: var(--sand);
-  box-shadow: 0 0 12px rgba(0,0,0,0.35);
+  background: linear-gradient(180deg, #f7e6c6 0%, #dfc08c 100%);
+  border: 2px solid #5c3b1d;
+  color: #4b2d17;
+  box-shadow: 0 6px 12px rgba(40,22,10,0.4);
 }
 
 .pirate .bm-tab:hover{
-  box-shadow: 0 0 16px rgba(210,166,84,0.35);
+  box-shadow: 0 8px 16px rgba(40,22,10,0.45);
 }
   </style>
   <link rel="stylesheet" href="../bookmarks.css">
