--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -85,8 +85,9 @@ main{
   padding: 0 18px;
 }
 
-h1::after{
-  content: none;
+.pirate h1::after,
+.pirate h2::after{
+  content: none !important;
 }
 
 h1, h2{
@@ -336,6 +337,27 @@ a:hover{
   box-shadow: 0 6px 12px rgba(40,22,10,0.4);
 }
 
+.pirate .toc-tab::before,
+.pirate .toc-tab::after{
+  content: "";
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #c6a06a;
+  box-shadow: inset 0 0 2px rgba(60,32,12,0.6);
+}
+
+.pirate .toc-tab::before{
+  left: 8px;
+  top: 6px;
+}
+
+.pirate .toc-tab::after{
+  right: 8px;
+  top: 6px;
+}
+
 .pirate .toc-tab:hover{
   box-shadow: 0 8px 16px rgba(40,22,10,0.45);
 }
@@ -423,6 +445,27 @@ a:hover{
   border: 2px solid #5c3b1d;
   color: #4b2d17;
   box-shadow: 0 6px 12px rgba(40,22,10,0.4);
+}
+
+.pirate .bm-tab::before,
+.pirate .bm-tab::after{
+  content: "";
+  position: absolute;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background: #c6a06a;
+  box-shadow: inset 0 0 2px rgba(60,32,12,0.6);
+}
+
+.pirate .bm-tab::before{
+  left: 8px;
+  top: 6px;
+}
+
+.pirate .bm-tab::after{
+  right: 8px;
+  top: 6px;
 }
 
 .pirate .bm-tab:hover{
