--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -468,8 +468,8 @@ a:hover{
         </filter>
       </defs>
       <image href="assets/map.png" width="1080" height="540" />
-      <path id="route-path" d="M70 285 C 180 250, 320 250, 430 270 C 520 285, 610 310, 700 300 C 830 285, 950 265, 1030 250"
-        fill="none" stroke="var(--mapline)" stroke-width="4" stroke-dasharray="12 10" filter="url(#softGlow)"/>
+      <path id="route-path" d="M1035 250 C 980 210, 900 215, 830 245 C 760 275, 720 310, 670 300 C 620 290, 580 260, 540 255 C 500 250, 470 265, 450 280 C 410 310, 360 330, 300 320 C 230 305, 170 285, 100 290"
+        fill="none" stroke="#c4533c" stroke-width="4.5" stroke-dasharray="8 10" stroke-linecap="round" filter="url(#softGlow)"/>
       <image id="ship" class="map-ship" href="assets/ship.png" width="90" height="70" x="-45" y="-35" />
     </svg>
   </div>
