--- a/messtechnik/messtechnik.html
+++ b/messtechnik/messtechnik.html
@@ -467,10 +467,10 @@ a:hover{
           </feMerge>
         </filter>
       </defs>
-      <image href="./assets/map.png" xlink:href="./assets/map.png" width="1080" height="540" />
+      <image href="/messtechnik/assets/map.png" xlink:href="/messtechnik/assets/map.png" width="1080" height="540" />
       <path id="route-path" d="M1035 250 C 980 210, 900 215, 830 245 C 760 275, 720 310, 670 300 C 620 290, 580 260, 540 255 C 500 250, 470 265, 450 280 C 410 310, 360 330, 300 320 C 230 305, 170 285, 100 290"
         fill="none" stroke="#c4533c" stroke-width="4.5" stroke-dasharray="8 10" stroke-linecap="round" filter="url(#softGlow)"/>
-      <image id="ship" class="map-ship" href="./assets/ship.png" xlink:href="./assets/ship.png" width="90" height="70" x="-45" y="-35" />
+      <image id="ship" class="map-ship" href="/messtechnik/assets/ship.png" xlink:href="/messtechnik/assets/ship.png" width="90" height="70" x="-45" y="-35" />
     </svg>
   </div>
   <canvas id="rain"></canvas>
@@ -528,7 +528,7 @@ a:hover{
         </defs>
         <rect x="2" y="6" width="6" height="56" rx="2" fill="#7a4c2a"/>
         <g filter="url(#flagWave)">
-          <image href="assets/flagge.png" x="10" y="8" width="100" height="54" />
+          <image href="/messtechnik/assets/flagge.png" xlink:href="/messtechnik/assets/flagge.png" x="10" y="8" width="100" height="54" />
         </g>
       </svg>
     </span>
